--- a/index.html
+++ b/index.html
@@ -17,23 +17,14 @@
   <link rel="stylesheet" href="css/mdb.min.css">
   <!-- Your custom styles (optional) -->
   <link rel="stylesheet" href="css/style.css">
+
+  <link href='https://fonts.googleapis.com/css?family=Annie Use Your Telescope' rel='stylesheet'>
 </head>
 <body >
 
   <header id="header" class="scrollspy">
-    <div id="bgp">
-    <div id="wel">
-      <h1 class="padtop">
-        Portfolio
-      </h1>
-      <div class="flex">
-      <h1 class="nameP">
-        Pierre Maruejol
-      </h1>
-      </div>
-        
-
-    </div>
+    <div id="bgp" class="flex">
+      <div class="intro">Je suis Pierre Maruejol <span class="indeks"></span></div>
     </div>
     <a class="ca3-scroll-down-link ca3-scroll-down-arrow" data-ca3_iconfont="ETmodules" data-ca3_icon="" href="#about"></a>
     </header>
