Basicly i'm very smol

--- a/index.html
+++ b/index.html
@@ -23,11 +23,35 @@
 <body >
 
   <header id="header" class="scrollspy">
+      <div id="imageG"></div>
+      <div id="imageD"></div>
     <div id="bgp" class="flex">
-      <div class="intro">Je suis Pierre Maruejol <span class="indeks"></span></div>
+
+      <div class="centerBox">
+
+        <div class="categoryWrapper">
+          <div class="intro">Je suis Pierre Maruejol<span class="indeks"></span></div>
+          <div class="intro padbot"> Je suis étudiant en DUT informatique à l'IUT de Montpellier</div>
+          <div class="intro"> </div>
+          <button id="boop">
+            <span>
+                <span>
+                    <span   data-attr-span="Continuer">
+                        Continuer
+                    </span>
+                </span>
+            </span>
+          </button>
+        </div>
+
+      </div>
     </div>
+
     <a class="ca3-scroll-down-link ca3-scroll-down-arrow" data-ca3_iconfont="ETmodules" data-ca3_icon="" href="#about"></a>
     </header>
+
+
+
     <nav id="menu" class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
