Petit push pour montrer

--- a/index.html
+++ b/index.html
@@ -25,15 +25,21 @@
   <header id="header" class="scrollspy">
       <div id="imageG"></div>
       <div id="imageD"></div>
+
+
+    <a class="ca3-scroll-down-link ca3-scroll-down-arrow" data-ca3_iconfont="ETmodules" data-ca3_icon="" href="#about"></a>
+    </header>
     <div id="bgp" class="flex">
 
       <div class="centerBox">
 
         <div class="categoryWrapper">
-          <div class="intro">Je suis Pierre Maruejol<span class="indeks"></span></div>
-          <div class="intro padbot"> Je suis étudiant en DUT informatique à l'IUT de Montpellier</div>
-          <div class="intro"> </div>
-          <button id="boop">
+
+          <div class="intro">Bonjour, je suis Pierre Maruejol<span class="indeks"></span></div>
+          <div class="intro "> Je suis étudiant en DUT informatique à l'IUT de Montpellier</div>
+          <div class="intro padbot">J'aspire à devenir Software Developer </div>
+          <div class="intro "> </div>
+          <button id="boop" >
             <span>
                 <span>
                     <span   data-attr-span="Continuer">
@@ -46,9 +52,6 @@
 
       </div>
     </div>
-
-    <a class="ca3-scroll-down-link ca3-scroll-down-arrow" data-ca3_iconfont="ETmodules" data-ca3_icon="" href="#about"></a>
-    </header>
 
 
 
