--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <div class="categoryWrapper">
 
-          <div class="intro">Bonjour, je suis Pierre Maruejol<span class="indeks"></span></div>
+          <div class="intro">Bonjour, je suis <span class="intro2"> Pierre Maruejol </span><span class="indeks"></span></div>
           <div class="intro "> Je suis étudiant en DUT informatique à l'IUT de Montpellier</div>
           <div class="intro padbot">J'aspire à devenir Software Developer </div>
           <div class="intro "> </div>
