tests des scripts

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <!-- Your custom styles (optional) -->
   <link rel="stylesheet" href="css/style.css">
 
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
   <link href='https://fonts.googleapis.com/css?family=Annie Use Your Telescope' rel='stylesheet'>
 </head>
 <body >
@@ -60,16 +62,42 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link active" href="#about">Présentation <span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link" href="#">Features</a>
         <a class="nav-item nav-link" href="#">Pricing</a>
         <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
       </div>
     </div>
   </nav>
-  <div id="selfpre" >
-    test
+  <div  id="selfpre" >
+    <div id="about" class="grad">
+      <div class="container spacer" data-aos="flip-right">
+        <div class="card cardcolor">
+          <div class="row">
+            <div class="col-sm flex ">
+                <div class="avatar flex">
+                  <img src="./Picture/ID-numérique.JPG" class="rounded-circle pfp" alt="Ma photo">
+                </div>
+                <h3 class="card-title margtop">Pierre Maruejol</h3>
+                <!-- Text -->
+                <p class="card-text container ">Je suis actuellement en DUT informatique à Montpellier.
+                <br>Je compte continuer mes études à l'ÉTS de Montréal,
+                afin de faire un Baccalauréat en génie Logiciel.
+                Entre temps je vais effectuer un stage chez <a href="https://www.yogan-developpement.fr/accueil/" alt="lien vers le site de Yogan Développement">Yogan Développement</a>.</p>
+            </div>
+            <div class="col-sm">
+              One of three columns
+            </div>
+          </div>
+          <div class="card-body">
 
+            <!-- Title -->
+
+
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   <div id="trans">
 
