--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
     </div>
 
-    <nav id="menu" class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+    <nav id="menu" class="navbar sticky-top navbar-expand-lg cardcolor">
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -137,7 +137,7 @@
                 </div>
                 <div class="tab-pane fade" id="dog" role="tabpanel" aria-labelledby="dog-tab">
                   J'éprouve une passion pour les animaux, plus spécialement les chiens, ils ne savent pas à quel point ils nous aident, peu importe ce qu'on fait et comment on est ils nous aiment toujours autant.
-                  Les aider est la moindre des choses.  
+                  Les aider est la moindre des choses.
                 </div>
 
               </div>
