--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
 
     <nav id="menu" class="navbar sticky-top navbar-expand-lg cardcolor">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">Pierre Maruejol</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -69,12 +69,14 @@
       </div>
     </div>
   </nav>
+
+
   <div  id="selfpre" >
     <div id="about" class="grad">
       <div class="container spacer" data-aos="flip-right">
         <div class="card cardcolor">
-          <div class="row align-items-center">
-            <div class="col-sm flex ">
+          <div class="row r">
+            <div class="col-sm flex align-self-center ">
                 <div class="avatar flex">
                   <img src="./Picture/ID-numérique.JPG" class="rounded-circle pfp" alt="Ma photo">
                 </div>
@@ -85,61 +87,65 @@
                 afin de faire un Baccalauréat en génie Logiciel.
                 Entre temps je vais effectuer un stage chez <a href="https://www.yogan-developpement.fr/accueil/" alt="lien vers le site de Yogan Développement">Yogan Développement</a>.</p>
             </div>
-            <div class="col-sm">
-              <h4 class="card-title">Intérêts</h4>
-              <ul class="nav nav-tabs" id="myTab" role="tablist">
-                <li class="nav-item">
-                  <a class="nav-link active" id="jeuxvideos-tab" data-toggle="tab" href="#jeuxvideos" role="tab" aria-controls="jeuxvideos" class="navbut"
-                    aria-selected="true">Jeux vidéos</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" id="prog-tab" data-toggle="tab" href="#prog" role="tab" aria-controls="prog" class="navbut"
-                    aria-selected="false">Programmation</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" id="manga-tab" data-toggle="tab" href="#manga" role="tab" aria-controls="manga" class="navbut"
-                    aria-selected="false">Manga</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" id="dessins-tab" data-toggle="tab" href="#dessins" role="tab" aria-controls="dessins" class="navbut"
-                    aria-selected="false">Dessins</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" id="sport-tab" data-toggle="tab" href="#sport" role="tab" aria-controls="sport" class="navbut"
-                    aria-selected="false">Natation</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" id="dog-tab" data-toggle="tab" href="#dog" role="tab" aria-controls="dog" class="navbut"
-                    aria-selected="false">Animaux</a>
-                </li>
-              </ul>
-              <div class="tab-content" id="myTabContent">
-                <div class="tab-pane fade show active" id="jeuxvideos" role="tabpanel" aria-labelledby="jeuxvideos-tab">Depuis tout petit
-                  j'ai été baigné dans les jeux vidéos dans un premier temps avec la GameCube puis avec l'ordinateur. Aujourd'hui,
-                  les jeux vidéos sont une source de défis de programmation ainsi qu'un passe temps coopératif.
-                </div>
-                <div class="tab-pane fade" id="prog" role="tabpanel" aria-labelledby="prog-tab">
-                  Bien sûr, je n'aurais rien à faire ici si je n'aimais pas la programmation. J'aime créer et la programmation est un très bon médium d'expression,
-                  surtout que celui-ci est encore jeune, le voir évoluer me passionne. Certains rêves paraissent de moins en moins iréalisables.
-                </div>
-                <div class="tab-pane fade" id="manga" role="tabpanel" aria-labelledby="manga-tab">
-                  Les mangas et les animés me permettent de voyager et d'apprendre de moi, ceux-ci sont à la fois simple et complexe au travers de
-                  l'histoire qu'ils racontent. Ceux-ci sont moins limités par nos limites de la physique et permettent de voir émerger des mondes
-                  plus fantaisistes les uns que les autres.
-                </div>
-                <div class="tab-pane fade" id="dessins" role="tabpanel" aria-labelledby="dessins-tab">
-                  J'ai toujours dessiné, même si c'était pas très esthétique dans un premier temps, je tiens toujours à m'améliorer pour rendre
-                  mes dessins les plus réalistes possible, je me sers parfois de mes dessins pour schématiser mes programmes ou pour les intégrer au site (logos, bannières, fond...).
-                </div>
-                <div class="tab-pane fade" id="sport" role="tabpanel" aria-labelledby="sport-tab">
-                  Le cliché des programmeurs semblent être des personnes non-sportives qui sont sédentaires, j'espère aider à contredire ce cliché. La natation est très importante pour
-                  moi en plus de me maintenir en forme, la natation me permet de faire le tri et me concentrer sur les choses importantes.
-                </div>
-                <div class="tab-pane fade" id="dog" role="tabpanel" aria-labelledby="dog-tab">
-                  J'éprouve une passion pour les animaux, plus spécialement les chiens, ils ne savent pas à quel point ils nous aident, peu importe ce qu'on fait et comment on est ils nous aiment toujours autant.
-                  Les aider est la moindre des choses.
-                </div>
+            <div class="col-sm margtop">
+              <div class="container">
+                <h4 class="card-title">Intérêts</h4>
+                <ul class="nav nav-tabs" id="myTab" role="tablist">
+                  <li class="nav-item">
+                    <a class="nav-link active" id="jeuxvideos-tab" data-toggle="tab" href="#jeuxvideos" role="tab" aria-controls="jeuxvideos" class="navbut"
+                      aria-selected="true">Jeux vidéos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" id="prog-tab" data-toggle="tab" href="#prog" role="tab" aria-controls="prog" class="navbut"
+                      aria-selected="false">Programmation</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" id="manga-tab" data-toggle="tab" href="#manga" role="tab" aria-controls="manga" class="navbut"
+                      aria-selected="false">Manga</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" id="dessins-tab" data-toggle="tab" href="#dessins" role="tab" aria-controls="dessins" class="navbut"
+                      aria-selected="false">Dessins</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" id="sport-tab" data-toggle="tab" href="#sport" role="tab" aria-controls="sport" class="navbut"
+                      aria-selected="false">Natation</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" id="dog-tab" data-toggle="tab" href="#dog" role="tab" aria-controls="dog" class="navbut"
+                      aria-selected="false">Animaux</a>
+                  </li>
+                </ul>
+                <div class="tab-content margtop" id="myTabContent">
+                  <div class="tab-pane fade show active" id="jeuxvideos" role="tabpanel" aria-labelledby="jeuxvideos-tab">Depuis tout petit
+                    j'ai été baigné dans les jeux vidéos dans un premier temps avec la GameCube puis avec l'ordinateur. Aujourd'hui,
+                    les jeux vidéos sont une source de défis de programmation ainsi qu'un passe temps coopératif.
+                  </div>
+                  <div class="tab-pane fade" id="prog" role="tabpanel" aria-labelledby="prog-tab">
+                    Bien sûr, je n'aurais rien à faire ici si je n'aimais pas la programmation. J'aime créer et la programmation est un très bon médium d'expression,
+                    surtout que celui-ci est encore jeune, le voir évoluer me passionne. Certains rêves paraissent de moins en moins iréalisables.
+                  </div>
+                  <div class="tab-pane fade" id="manga" role="tabpanel" aria-labelledby="manga-tab">
+                    Les mangas et les animés me permettent de voyager et d'apprendre de moi, ceux-ci sont à la fois simple et complexe au travers de
+                    l'histoire qu'ils racontent. Ceux-ci sont moins limités par nos limites de la physique et permettent de voir émerger des mondes
+                    plus fantaisistes les uns que les autres.
+                  </div>
+                  <div class="tab-pane fade" id="dessins" role="tabpanel" aria-labelledby="dessins-tab">
+                    J'ai toujours dessiné, même si c'était pas très esthétique dans un premier temps, je tiens toujours à m'améliorer pour rendre
+                    mes dessins les plus réalistes possible, je me sers parfois de mes dessins pour schématiser mes programmes ou pour les intégrer au site (logos, bannières, fond...).
+                  </div>
+                  <div class="tab-pane fade" id="sport" role="tabpanel" aria-labelledby="sport-tab">
+                    Le cliché des programmeurs semblent être des personnes non-sportives qui sont sédentaires, j'espère aider à contredire ce cliché. La natation est très importante pour
+                    moi en plus de me maintenir en forme, la natation me permet de faire le tri et me concentrer sur les choses importantes.
+                  </div>
+                  <div class="tab-pane fade" id="dog" role="tabpanel" aria-labelledby="dog-tab">
+                    J'éprouve une passion pour les animaux, plus spécialement les chiens, ils ne savent pas à quel point ils nous aident, peu importe ce qu'on fait et comment on est ils nous aiment toujours autant.
+                    Les aider est la moindre des choses.
+                  </div>
 
+                  <h4 class="card-title">Intérêts</h4>
+
+                </div>
               </div>
             </div>
           </div>
