--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     Les aider est la moindre des choses.
                   </div>
 
-                  <h4 class="card-title">Intérêts</h4>
+                  <h4 class="card-title">Contacts</h4>
 
                 </div>
               </div>
