--- a/index.html
+++ b/index.html
@@ -143,8 +143,14 @@
                     Les aider est la moindre des choses.
                   </div>
 
-                  <h4 class="card-title">Contacts</h4>
-
+                        <div class="position-absolute ">
+                          <h4 class="card-title">Contacts</h4>
+                            <button type="button" class="btn btn-default"><i class="fas fa-phone-alt"></i></button>
+                            <button type="button" class="btn btn-default"><i class="far fa-envelope"></i></button>
+                            <button type="button" class="btn btn-default"><i class="fas fa-comment-alt"></i></button>
+                            <button type="button" class="btn btn-default"><i class="fab fa-github"></i></button>
+                            <button type="button" class="btn btn-default"><i class="fab fa-linkedin"></i></button>
+                        </div>
                 </div>
               </div>
             </div>
