--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 
   <div  id="selfpre" >
     <div id="about" class="grad">
-      <div class="container spacer" data-aos="flip-right">
-        <div class="card cardcolor">
-          <div class="row r">
+      <div class="container spacer " data-aos="flip-right">
+        <div class="card cardcolor padbot">
+          <div class="row padbot">
             <div class="col-sm flex align-self-center ">
                 <div class="avatar flex">
                   <img src="./Picture/ID-numérique.JPG" class="rounded-circle pfp" alt="Ma photo">
@@ -88,7 +88,7 @@
                 Entre temps je vais effectuer un stage chez <a href="https://www.yogan-developpement.fr/accueil/" alt="lien vers le site de Yogan Développement">Yogan Développement</a>.</p>
             </div>
             <div class="col-sm margtop">
-              <div class="container">
+              <div class="container minInteret">
                 <h4 class="card-title">Intérêts</h4>
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
                   <li class="nav-item">
@@ -142,24 +142,17 @@
                     J'éprouve une passion pour les animaux, plus spécialement les chiens, ils ne savent pas à quel point ils nous aident, peu importe ce qu'on fait et comment on est ils nous aiment toujours autant.
                     Les aider est la moindre des choses.
                   </div>
-
-                        <div class="position-absolute ">
-                          <h4 class="card-title">Contacts</h4>
-                            <button type="button" class="btn btn-default"><i class="fas fa-phone-alt"></i></button>
-                            <button type="button" class="btn btn-default"><i class="far fa-envelope"></i></button>
-                            <button type="button" class="btn btn-default"><i class="fas fa-comment-alt"></i></button>
-                            <button type="button" class="btn btn-default"><i class="fab fa-github"></i></button>
-                            <button type="button" class="btn btn-default"><i class="fab fa-linkedin"></i></button>
-                        </div>
                 </div>
               </div>
+              <div class="position-absolute container">
+                <h4 class="card-title">Contacts</h4>
+                  <button type="button" class="btn btn-dark"><i class="fas fa-phone-alt"></i></button>
+                  <button type="button" class="btn btn-dark"><i class="far fa-envelope"></i></button>
+                  <button type="button" class="btn btn-dark"><i class="fas fa-comment-alt"></i></button>
+                  <button type="button" class="btn btn-dark"><i class="fab fa-github"></i></button>
+                  <button type="button" class="btn btn-dark"><i class="fab fa-linkedin"></i></button>
+              </div>
             </div>
-          </div>
-          <div class="card-body">
-
-            <!-- Title -->
-
-
           </div>
         </div>
       </div>
