Push Projets début

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link active" href="#about">Présentation <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="#">Features</a>
+        <a class="nav-item nav-link" href="#project">Projets</a>
         <a class="nav-item nav-link" href="#">Pricing</a>
         <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
       </div>
@@ -158,12 +158,163 @@
       </div>
     </div>
   </div>
-  <div id="trans">
+  <div id="trans" >
+    <div class="soustitre" id="project">
+      <h1 class="menuH1">Projets<h1>
+    </div>
+  </div>
+  <div id="bgpro" >
+    <div class="grad">
+      <div class="container">
 
+      <div class="row padup">
+        <div class="container col">
+
+        <div class="card cardcolor">
+
+          <!-- Card image -->
+          <iframe class="vid" src="https://www.youtube.com/embed/WusLZXlTm7k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+          <!-- Card content -->
+          <div class="card-body">
+
+            <!-- Title -->
+            <h4 class="card-title"><a>Génération Procédurale</a></h4>
+            <!-- Text -->
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+            <!-- Button -->
+            <a href="#" class="btn btn-primary">Button</a>
+
+          </div>
+        </div>
+
+        </div>
+        <div class="container col">
+
+
+          <div class="card cardcolor">
+
+            <!-- Card image -->
+            <img class="card-img-top" src="./Picture/TTFF7.png" alt="Card image cap">
+
+            <!-- Card content -->
+            <div class="card-body">
+
+              <!-- Title -->
+              <h4 class="card-title"><a>Triple Triad</a></h4>
+              <!-- Text -->
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+              <!-- Button -->
+              <a href="#" class="btn btn-primary">Button</a>
+
+            </div>
+
+          </div>
+        </div>
+        <div class=" container col">
+
+
+          <div class="card cardcolor">
+
+            <!-- Card image -->
+            <img class="card-img-top" src="./Picture/dominion.png" alt="Card image cap">
+
+            <!-- Card content -->
+            <div class="card-body">
+
+              <!-- Title -->
+              <h4 class="card-title"><a>Dominion</a></h4>
+              <!-- Text -->
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+              <!-- Button -->
+              <a href="#" class="btn btn-primary">Button</a>
+
+            </div>
+
+          </div>
+        </div>
+      </div>
+      <div class="row padup">
+        <div class="container col">
+
+        <div class="card cardcolor">
+
+          <!-- Card image -->
+          <iframe class="card-img-top" src="https://www.youtube.com/embed/WusLZXlTm7k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+          <!-- Card content -->
+          <div class="card-body">
+
+            <!-- Title -->
+            <h4 class="card-title"><a>Génération Procédurale</a></h4>
+            <!-- Text -->
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+            <!-- Button -->
+            <a href="#" class="btn btn-primary">Button</a>
+
+          </div>
+        </div>
+
+        </div>
+        <div class="container col">
+
+
+          <div class="card cardcolor">
+
+            <!-- Card image -->
+            <img class="card-img-top" src="./Picture/TTFF7.png" alt="Card image cap">
+
+            <!-- Card content -->
+            <div class="card-body">
+
+              <!-- Title -->
+              <h4 class="card-title"><a>Triple Triad</a></h4>
+              <!-- Text -->
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+              <!-- Button -->
+              <a href="#" class="btn btn-primary">Button</a>
+
+            </div>
+
+          </div>
+        </div>
+        <div class=" container col">
+
+
+          <div class="card cardcolor">
+
+            <!-- Card image -->
+            <img class="card-img-top" src="./Picture/dominion.png" alt="Card image cap">
+
+            <!-- Card content -->
+            <div class="card-body">
+
+              <!-- Title -->
+              <h4 class="card-title"><a>Dominion</a></h4>
+              <!-- Text -->
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+              <!-- Button -->
+              <a href="#" class="btn btn-primary">Button</a>
+
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="soustitre">
-    <h1 class="menuH1">Projets<h1>
-  </div>
+</div>
+
+
+
+
+
 
 
 
