--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
     </div>
   </div>
   <div id="bgpro" >
-    <div class="grad">
+    <div class="grad2">
       <div class="container">
 
-      <div class="row padup">
+      <div class="row padup " data-aos="zoom-in-up">
         <div class="container col">
 
         <div class="card cardcolor">
@@ -213,19 +213,71 @@
 
           </div>
         </div>
+
+
+          <div class="container col">
+
+
+            <div class="card cardcolor">
+
+              <!-- Card image -->
+              <img class="card-img-top" src="./Picture/CuteOnTime.png" alt="Card image cap">
+
+              <!-- Card content -->
+              <div class="card-body">
+
+                <!-- Title -->
+                <h4 class="card-title"><a>Code Game Jam 2020</a></h4>
+                <!-- Text -->
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                  content.</p>
+                <!-- Button -->
+                <a href="#" class="btn btn-primary">Button</a>
+
+              </div>
+
+            </div>
+          </div>
+
+      </div>
+      <div class="row padup" data-aos="zoom-in-up">
+      <div class=" container col">
+
+
+        <div class="card cardcolor">
+
+          <!-- Card image -->
+          <img class="card-img-top" src="./Picture/NuitDeLInfo.PNG" alt="Card image cap">
+
+          <!-- Card content -->
+          <div class="card-body">
+
+            <!-- Title -->
+            <h4 class="card-title"><a>La nuit de l'info 2019</a></h4>
+            <!-- Text -->
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+            <!-- Button -->
+            <a href="#" class="btn btn-primary">Button</a>
+
+          </div>
+
+        </div>
+      </div>
+
         <div class=" container col">
 
 
           <div class="card cardcolor">
 
             <!-- Card image -->
-            <img class="card-img-top" src="./Picture/dominion.png" alt="Card image cap">
+            <img class="card-img-top" src="./Picture/eCommerce.png" alt="Card image cap">
 
             <!-- Card content -->
             <div class="card-body">
 
               <!-- Title -->
-              <h4 class="card-title"><a>Dominion</a></h4>
+              <h4 class="card-title"><a>Site de "Ecommerce"</a></h4>
               <!-- Text -->
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
@@ -236,20 +288,18 @@
 
           </div>
         </div>
-      </div>
-      <div class="row padup">
-        <div class="container col">
+        <div class="container col ">
 
         <div class="card cardcolor">
 
           <!-- Card image -->
-          <iframe class="card-img-top" src="https://www.youtube.com/embed/WusLZXlTm7k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <img class="card-img-top" src="./Picture/projetMixt.png" alt="Card image cap">
 
           <!-- Card content -->
           <div class="card-body">
 
             <!-- Title -->
-            <h4 class="card-title"><a>Génération Procédurale</a></h4>
+            <h4 class="card-title"><a>"Projet Mixt"</a></h4>
             <!-- Text -->
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
               content.</p>
@@ -260,19 +310,45 @@
         </div>
 
         </div>
-        <div class="container col">
+      </div>
+      <div class="row padup" data-aos="zoom-in-up">
+      <div class=" container col">
+
+
+        <div class="card cardcolor">
+
+          <!-- Card image -->
+          <img class="card-img-top" src="./Picture/dominion.png" alt="Card image cap">
+
+          <!-- Card content -->
+          <div class="card-body">
+
+            <!-- Title -->
+            <h4 class="card-title"><a>Dominion</a></h4>
+            <!-- Text -->
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+            <!-- Button -->
+            <a href="#" class="btn btn-primary">Button</a>
+
+          </div>
+
+        </div>
+      </div>
+
+        <div class=" container col">
 
 
           <div class="card cardcolor">
 
             <!-- Card image -->
-            <img class="card-img-top" src="./Picture/TTFF7.png" alt="Card image cap">
+            <img class="card-img-top" src="./Picture/AssassinsWood.png" alt="Card image cap">
 
             <!-- Card content -->
             <div class="card-body">
 
               <!-- Title -->
-              <h4 class="card-title"><a>Triple Triad</a></h4>
+              <h4 class="card-title"><a>Code Game Jam 2019</a></h4>
               <!-- Text -->
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
@@ -283,28 +359,27 @@
 
           </div>
         </div>
-        <div class=" container col">
+        <div class="container col ">
 
+        <div class="card cardcolor">
 
-          <div class="card cardcolor">
+          <!-- Card image -->
+          <img class="card-img-top" src="./Picture/Démineur.PNG" alt="Card image cap">
 
-            <!-- Card image -->
-            <img class="card-img-top" src="./Picture/dominion.png" alt="Card image cap">
+          <!-- Card content -->
+          <div class="card-body">
 
-            <!-- Card content -->
-            <div class="card-body">
-
-              <!-- Title -->
-              <h4 class="card-title"><a>Dominion</a></h4>
-              <!-- Text -->
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-              <!-- Button -->
-              <a href="#" class="btn btn-primary">Button</a>
-
-            </div>
+            <!-- Title -->
+            <h4 class="card-title"><a>Démineur</a></h4>
+            <!-- Text -->
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+            <!-- Button -->
+            <a href="#" class="btn btn-primary">Button</a>
 
           </div>
+        </div>
+
         </div>
       </div>
     </div>
