--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
           <div class="card cardcolor">
 
             <!-- Card image -->
-            <img class="card-img-top" src="./Picture/AssassinsWood.png" alt="Card image cap">
+            <img class="card-img-top" src="./Picture/AssassinsWood.PNG" alt="Card image cap">
 
             <!-- Card content -->
             <div class="card-body">
