--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link active" href="#about">Présentation <span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link" href="#project">Projets</a>
-        <a class="nav-item nav-link" href="#">Pricing</a>
-        <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        <a class="nav-item nav-link" href="#trans2">Formations</a>
+        <a class="nav-item nav-link" href="#fcontact">Contactez-moi</a>
       </div>
     </div>
   </nav>
@@ -145,7 +145,7 @@
                 </div>
               </div>
               <div class="position-absolute container">
-                <h4 class="card-title">Contacts</h4>
+                <h4 class="card-title">Vous pouvez me croiser ici :</h4>
                   <button type="button" class="btn btn-dark"><i class="fas fa-phone-alt"></i></button>
                   <button type="button" class="btn btn-dark"><i class="far fa-envelope"></i></button>
                   <button type="button" class="btn btn-dark"><i class="fas fa-comment-alt"></i></button>
@@ -385,7 +385,42 @@
     </div>
   </div>
 </div>
+<div id="trans2" >
+  <div class="grad3">
+    <div class="soustitre" id="project">
+      <h1 class="menuH1">Formations et expériences<h1>
+    </div>
+  </div>
+</div>
+<section class="timeline">
+  <ul>
+    <li>
+      <div data-aos="fade-left">
+        <time>2018</time> En 2018, j'ai passé mon Bac S SVT spé ISN au Lycée Jean Monnet à Montpellier
+      </div>
+    </li>
+    <li>
+      <div data-aos="fade-right">
+        <time>2018-2020</time> De 2018 à 2020, j'étais en DUT Informatique à L'IUT Montpellier - Sète
+      </div>
+    </li>
+    <li>
+      <div data-aos="fade-left">
+        <time>Printenmps 2020</time> Je suis en stage chez <a href="https://www.yogan-developpement.fr/accueil/" alt="lien vers le site de Yogan Développement">Yogan Développement</a> jusqu'en juillet 2020 (durée ~8 semaines)
+      </div>
+    </li>
+    <li>
+      <div data-aos="fade-right">
+        <time>2020 - 2024?</time> Je souhaite ensuite continuer mes études à L'ÉTS de Montréal qui est une école d'ingénieur canadienne.
+      </div>
+    </li>
+  </ul>
+</section>
+<div class="sticky-bottom footerContact" id="fcontact">
+  <div class="grad3">
 
+  </div>
+</div>
 
 
 
