--- a/index.html
+++ b/index.html
@@ -216,10 +216,8 @@
             <!-- Title -->
             <h4 class="card-title"><a>Génération Procédurale</a></h4>
             <!-- Text -->
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
+            <p class="card-text">Ce projet a été réalisé sur Unity en C# et me permet d'apprendre à utiliser le bruit de perlin afin de faire de la génération procédurale</p>
             <!-- Button -->
-            <a href="#" class="btn btn-primary">Button</a>
 
           </div>
         </div>
@@ -239,10 +237,9 @@
               <!-- Title -->
               <h4 class="card-title"><a>Triple Triad</a></h4>
               <!-- Text -->
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <p class="card-text">Le Triple Triad est un projet réalisé en groupe de 4 réalisé en JavaScript, PHP, HTML/CSS durant un tuteura</p>
               <!-- Button -->
-              <a href="#" class="btn btn-primary">Button</a>
+              <a href="http://webinfo.iutmontp.univ-montp2.fr/~martinezf/TripleTriad/" target="_blank" class="btn btn-primary">Jouer</a>
 
             </div>
 
@@ -264,10 +261,9 @@
                 <!-- Title -->
                 <h4 class="card-title"><a>Code Game Jam 2020</a></h4>
                 <!-- Text -->
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                  content.</p>
+                <p class="card-text">Nous avions 30 heures pour réaliser un jeu sur le thème Cute And Creepy nous l'avons réalisé en C# </p>
                 <!-- Button -->
-                <a href="#" class="btn btn-primary">Button</a>
+                <a href="http://codegamejam.extragames.fr/" target="_blank" class="btn btn-primary">En savoir plus sur l'évènement</a>
 
               </div>
 
@@ -290,10 +286,9 @@
             <!-- Title -->
             <h4 class="card-title"><a>La nuit de l'info 2019</a></h4>
             <!-- Text -->
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
+            <p class="card-text">Dans cette évêment nous devions une application en une nuit cette saison c'était un site web d'orientation vers les ressources étudiantes</p>
             <!-- Button -->
-            <a href="#" class="btn btn-primary">Button</a>
+            <a href="https://www.nuitdelinfo.com/" class="btn btn-primary" target="_blank">En savoir plus sur l'évènement</a>
 
           </div>
 
@@ -314,10 +309,9 @@
               <!-- Title -->
               <h4 class="card-title"><a>Site de "Ecommerce"</a></h4>
               <!-- Text -->
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <p class="card-text">Ce site était un projet d'apprentissage de php visant à nous faire recréer un site d'Ecommerce avec un panier une boutique une vérification par mail en PHP</p>
               <!-- Button -->
-              <a href="#" class="btn btn-primary">Button</a>
+              <a href="http://webinfo.iutmontp.univ-montp2.fr/~maruejolp/projetPHP/" class="btn btn-primary">Accéder au site</a>
 
             </div>
 
@@ -336,10 +330,7 @@
             <!-- Title -->
             <h4 class="card-title"><a>"Projet Mixt"</a></h4>
             <!-- Text -->
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <!-- Button -->
-            <a href="#" class="btn btn-primary">Button</a>
+            <p class="card-text">Nous devions réaliser un site web en utilisant WordPress, en applicant la méthode agile et avec des "clients" qui essayaient d'être exigeant</p>
 
           </div>
         </div>
@@ -361,10 +352,7 @@
             <!-- Title -->
             <h4 class="card-title"><a>Dominion</a></h4>
             <!-- Text -->
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <!-- Button -->
-            <a href="#" class="btn btn-primary">Button</a>
+            <p class="card-text">Dans ce projet nous devions réaliser l'aspect backend d'un jeu de carte Dominion en Java</p>
 
           </div>
 
@@ -385,10 +373,9 @@
               <!-- Title -->
               <h4 class="card-title"><a>Code Game Jam 2019</a></h4>
               <!-- Text -->
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <p class="card-text">Cette Code Game Jam a été réalisé sur le thème de balade en forêt et programmé en GameMakerLanguage (Notre jeu sera bientôt disponnible sur le site)</p>
               <!-- Button -->
-              <a href="#" class="btn btn-primary">Button</a>
+              <a href="http://codegamejam.extragames.fr/"  target="_blank"class="btn btn-primary">En savoir plus sur l'évènement</a>
 
             </div>
 
@@ -407,10 +394,9 @@
             <!-- Title -->
             <h4 class="card-title"><a>Démineur</a></h4>
             <!-- Text -->
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
+            <p class="card-text">J'ai programmé un démineur pour ma spécialité ISN de mon bac en Python en 2018.</p>
             <!-- Button -->
-            <a href="#" class="btn btn-primary">Button</a>
+            <a href="https://drive.google.com/file/d/1mLZvXHRwGsPg0T0RyW8WiMQUS5qjZm-m/view" target="_blank" class="btn btn-primary télé">Télécharger</a>
 
           </div>
         </div>
@@ -421,11 +407,12 @@
   </div>
 </div>
 <div id="trans2" >
-  <div class="grad3">
+
     <div class="soustitre" id="project">
       <h1 class="menuH1">Formations et expériences<h1>
     </div>
-  </div>
+    <canvas id='world'></canvas>
+
 </div>
 <section class="timeline">
   <ul>
